# logpilot

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: PROJECT.md  plugins.md  usage.md
src/logpilot/: __main__.py  cli.py  config.py
src/logpilot/aggregators/: counter.py  groupby.py  percentiles.py
src/logpilot/alerts/: anomaly.py  email_channel.py  rules.py  slack.py
src/logpilot/cache/: redis_cache.py
src/logpilot/parsers/: apache.py  auto_detect.py  base.py  json_parser.py  syslog.py
src/logpilot/perf/: jit_experiment.py  parallel_parser.py
src/logpilot/plugins/: base.py  registry.py
src/logpilot/plugins/examples/: csv_output.py
src/logpilot/search/: filter_chain.py  regex_search.py  time_filter.py
src/logpilot/visualization/: tables.py  templates.py  tui.py
tests/: conftest.py  test_aggregators.py  test_alerts.py  test_cache.py  test_parsers.py  test_plugins.py  test_search.py
