[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpilot"
version = "1.0.1"
description = "A fast, extensible log analysis CLI — parse, search, aggregate, alert."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "abdel" }]
keywords = ["logs", "cli", "analytics", "devops", "observability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/abdel/logpilot"
Documentation = "https://github.com/abdel/logpilot/blob/main/docs/usage.md"
Repository = "https://github.com/abdel/logpilot"
Changelog = "https://github.com/abdel/logpilot/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/abdel/logpilot/issues"

[project.optional-dependencies]
redis = ["redis>=4.6"]
tui = ["textual>=0.50"]
alerts = ["httpx>=0.25"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.9",
    "ruff>=0.3",
    "pytest-asyncio>=0.23",
]

[project.scripts]
logpilot = "logpilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["E501", "ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/logpilot --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/logpilot"]
omit = ["*/tests/*"]
